@startuml

title __CONTROLLER's Class Diagram__\n

  namespace Controller {
    namespace com.app.blockchain {
      namespace controller {
        class com.app.blockchain.controller.BlockController {
            + BlockController()
            + createNewBlock()
            + getBlockChain()
            + getLastBlock()
            + saveBlock()
            + saveBlockChain()
        }
      }
    }
  }
   namespace Controller {
      namespace com.app.blockchain {
        namespace controller {
          class com.app.blockchain.controller.NodeController {
              + NodeController()
              + addNode()
              + getUrlNodes()
          }
        }
      }
    }


  

  com.app.blockchain.controller.BlockController o-- com.app.blockchain.service.IBlockService : blockService
  com.app.blockchain.controller.BlockController o-- com.app.blockchain.service.INodeService : nodeService
  com.app.blockchain.controller.NodeController o-- com.app.blockchain.service.INodeService : nodeService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
